...
          Turn phone breaks into epic adventures.
        </Text>

        <View style={styles.spacerCta} />

        <Button
          testID="get-started-button"
          label="Begin new journey"
          variant="primary"
          size="lg"
          fullWidth
          onPress={handleGetStarted}
        />
...
